// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`schemaParser() parse schema with allof not able to merge 1`] = `
Object {
  "-44c06f09": Object {
    "$id": "-44c06f09",
    "allOf": Array [
      Object {
        "if": Object {
          "properties": Object {
            "animal": Object {
              "const": "Cat",
            },
          },
        },
        "then": Object {
          "properties": Object {
            "food": Object {
              "enum": Array [
                "meat",
                "grass",
                "fish",
              ],
              "type": "string",
            },
          },
          "required": Array [
            "food",
          ],
        },
      },
      Object {
        "if": Object {
          "properties": Object {
            "animal": Object {
              "const": "Fish",
            },
          },
        },
        "then": Object {
          "properties": Object {
            "food": Object {
              "enum": Array [
                "insect",
                "worms",
              ],
              "type": "string",
            },
            "water": Object {
              "enum": Array [
                "lake",
                "sea",
              ],
              "type": "string",
            },
          },
          "required": Array [
            "food",
            "water",
          ],
        },
      },
      Object {
        "required": Array [
          "animal",
        ],
      },
    ],
    "properties": Object {
      "animal": Object {
        "enum": Array [
          "Cat",
          "Fish",
        ],
      },
    },
    "type": "object",
  },
  "59fefb6e": Object {
    "$id": "59fefb6e",
    "properties": Object {
      "animal": Object {
        "const": "Fish",
      },
    },
  },
  "6f438756": Object {
    "$id": "6f438756",
    "properties": Object {
      "animal": Object {
        "const": "Cat",
      },
    },
  },
}
`;

exports[`schemaParser() parse schema with array condition 1`] = `
Object {
  "-33d8d73c": Object {
    "$id": "-33d8d73c",
    "properties": Object {
      "country": Object {
        "const": "United States of America",
      },
    },
  },
  "f254d0a": Object {
    "$id": "f254d0a",
    "properties": Object {
      "list": Object {
        "items": Object {
          "else": Object {
            "properties": Object {
              "postal_code": Object {
                "pattern": "[A-Z][0-9][A-Z] [0-9][A-Z][0-9]",
              },
            },
          },
          "if": Object {
            "properties": Object {
              "country": Object {
                "const": "United States of America",
              },
            },
          },
          "properties": Object {
            "country": Object {
              "default": "United States of America",
              "enum": Array [
                "United States of America",
                "Canada",
              ],
            },
          },
          "then": Object {
            "properties": Object {
              "postal_code": Object {
                "pattern": "[0-9]{5}(-[0-9]{4})?",
              },
            },
          },
          "type": "object",
        },
        "type": "array",
      },
    },
    "type": "object",
  },
}
`;

exports[`schemaParser() parses property dependencies properly 1`] = `
Object {
  "-4e612676": Object {
    "$id": "-4e612676",
    "dependencies": Object {
      "a": Array [
        "b",
      ],
    },
    "properties": Object {
      "a": Object {
        "type": "string",
      },
      "b": Object {
        "type": "integer",
      },
    },
    "required": Array [
      "a",
    ],
    "type": "object",
  },
}
`;

exports[`schemaParser() parses recursive refs in allOf properly 1`] = `
Object {
  "2b3d97f8": Object {
    "$id": "2b3d97f8",
    "definitions": Object {
      "@enum": Object {
        "properties": Object {
          "_id": Object {
            "title": "Value",
            "type": "number",
          },
          "children": Object {
            "items": Object {
              "allOf": Array [
                Object {
                  "$ref": "#/definitions/@enum",
                },
              ],
            },
            "title": "Subvalues",
            "type": "array",
          },
          "name": Object {
            "default": "",
            "title": "Name",
            "type": "string",
          },
        },
        "type": "object",
      },
    },
    "properties": Object {
      "value": Object {
        "items": Object {
          "allOf": Array [
            Object {
              "$ref": "#/definitions/@enum",
            },
          ],
        },
        "minItems": 1,
        "type": "array",
      },
    },
    "type": "object",
  },
}
`;

exports[`schemaParser() parses recursive refs properly 1`] = `
Object {
  "7cf4cd8a": Object {
    "$id": "7cf4cd8a",
    "$ref": "#/definitions/@enum",
    "definitions": Object {
      "@enum": Object {
        "properties": Object {
          "children": Object {
            "$ref": "#/definitions/@enum",
          },
          "name": Object {
            "default": "",
            "title": "Name",
            "type": "string",
          },
        },
        "type": "object",
      },
    },
  },
}
`;

exports[`schemaParser() parses schema and required dependencies properly 1`] = `
Object {
  "-738b34fc": Object {
    "$id": "-738b34fc",
    "dependencies": Object {
      "a": Object {
        "properties": Object {
          "a": Object {
            "type": "string",
          },
        },
        "required": Array [
          "b",
        ],
      },
    },
    "properties": Object {
      "a": Object {
        "type": "string",
      },
      "b": Object {
        "type": "integer",
      },
    },
    "required": Array [
      "a",
    ],
    "type": "object",
  },
}
`;

exports[`schemaParser() parses schema dependencies properly 1`] = `
Object {
  "75f1f611": Object {
    "$id": "75f1f611",
    "dependencies": Object {
      "a": Object {
        "properties": Object {
          "b": Object {
            "type": "integer",
          },
        },
      },
    },
    "properties": Object {
      "a": Object {
        "type": "string",
      },
    },
    "type": "object",
  },
}
`;

exports[`schemaParser() parses schema dependencies with one of and refs properly 1`] = `
Object {
  "-29b1244f": Object {
    "$id": "-29b1244f",
    "properties": Object {
      "a": Object {
        "enum": Array [
          "int",
        ],
      },
    },
    "type": "object",
  },
  "71dd1668": Object {
    "$id": "71dd1668",
    "properties": Object {
      "a": Object {
        "enum": Array [
          "bool",
        ],
      },
    },
    "type": "object",
  },
  "7de97d9a": Object {
    "$id": "7de97d9a",
    "definitions": Object {
      "needsA": Object {
        "properties": Object {
          "a": Object {
            "enum": Array [
              "int",
            ],
          },
          "b": Object {
            "type": "integer",
          },
        },
      },
      "needsB": Object {
        "properties": Object {
          "a": Object {
            "enum": Array [
              "bool",
            ],
          },
          "b": Object {
            "type": "boolean",
          },
        },
      },
    },
    "dependencies": Object {
      "a": Object {
        "oneOf": Array [
          Object {
            "$ref": "#/definitions/needsA",
          },
          Object {
            "$ref": "#/definitions/needsB",
          },
        ],
      },
    },
    "properties": Object {
      "a": Object {
        "enum": Array [
          "int",
          "bool",
        ],
        "type": "string",
      },
    },
    "type": "object",
  },
}
`;

exports[`schemaParser() parses schema with a single condition 1`] = `
Object {
  "-33d8d73c": Object {
    "$id": "-33d8d73c",
    "properties": Object {
      "country": Object {
        "const": "United States of America",
      },
    },
  },
  "7a88ed97": Object {
    "$id": "7a88ed97",
    "else": Object {
      "properties": Object {
        "postal_code": Object {
          "pattern": "[A-Z][0-9][A-Z] [0-9][A-Z][0-9]",
        },
      },
    },
    "if": Object {
      "properties": Object {
        "country": Object {
          "const": "United States of America",
        },
      },
    },
    "properties": Object {
      "country": Object {
        "default": "United States of America",
        "enum": Array [
          "United States of America",
          "Canada",
        ],
      },
    },
    "then": Object {
      "properties": Object {
        "postal_code": Object {
          "pattern": "[0-9]{5}(-[0-9]{4})?",
        },
      },
    },
    "type": "object",
  },
}
`;

exports[`schemaParser() parses schema with multiple conditions 1`] = `
Object {
  "-269ce7ef": Object {
    "$id": "-269ce7ef",
    "properties": Object {
      "Animal": Object {
        "const": "Dog",
      },
    },
    "required": Array [
      "Animal",
    ],
  },
  "-5e82ba72": Object {
    "$id": "-5e82ba72",
    "properties": Object {
      "BreedName": Object {
        "const": "Dalmation",
      },
    },
    "required": Array [
      "BreedName",
    ],
  },
  "-61d82723": Object {
    "$id": "-61d82723",
    "allOf": Array [
      Object {
        "if": Object {
          "properties": Object {
            "Animal": Object {
              "const": "Cat",
            },
          },
          "required": Array [
            "Animal",
          ],
        },
        "then": Object {
          "properties": Object {
            "Tail": Object {
              "default": "Long",
              "enum": Array [
                "Long",
                "Short",
                "None",
              ],
              "title": "Tail length",
              "type": "string",
            },
          },
          "required": Array [
            "Tail",
          ],
        },
      },
      Object {
        "if": Object {
          "properties": Object {
            "Animal": Object {
              "const": "Dog",
            },
          },
          "required": Array [
            "Animal",
          ],
        },
        "then": Object {
          "properties": Object {
            "Breed": Object {
              "allOf": Array [
                Object {
                  "if": Object {
                    "properties": Object {
                      "BreedName": Object {
                        "const": "Alsatian",
                      },
                    },
                    "required": Array [
                      "BreedName",
                    ],
                  },
                  "then": Object {
                    "properties": Object {
                      "Fur": Object {
                        "default": "brown",
                        "enum": Array [
                          "black",
                          "brown",
                        ],
                        "title": "Fur",
                        "type": "string",
                      },
                    },
                    "required": Array [
                      "Fur",
                    ],
                  },
                },
                Object {
                  "if": Object {
                    "properties": Object {
                      "BreedName": Object {
                        "const": "Dalmation",
                      },
                    },
                    "required": Array [
                      "BreedName",
                    ],
                  },
                  "then": Object {
                    "properties": Object {
                      "Spots": Object {
                        "default": "small",
                        "enum": Array [
                          "large",
                          "small",
                        ],
                        "title": "Spots",
                        "type": "string",
                      },
                    },
                    "required": Array [
                      "Spots",
                    ],
                  },
                },
              ],
              "properties": Object {
                "BreedName": Object {
                  "default": "Alsatian",
                  "enum": Array [
                    "Alsatian",
                    "Dalmation",
                  ],
                  "title": "Breed name",
                  "type": "string",
                },
              },
              "required": Array [
                "BreedName",
              ],
              "title": "Breed",
            },
          },
        },
      },
    ],
    "properties": Object {
      "Animal": Object {
        "default": "Cat",
        "enum": Array [
          "Cat",
          "Dog",
        ],
        "title": "Animal",
        "type": "string",
      },
    },
    "required": Array [
      "Animal",
    ],
    "type": "object",
  },
  "-7b9d5dae": Object {
    "$id": "-7b9d5dae",
    "properties": Object {
      "BreedName": Object {
        "const": "Alsatian",
      },
    },
    "required": Array [
      "BreedName",
    ],
  },
  "6dc2a62b": Object {
    "$id": "6dc2a62b",
    "properties": Object {
      "Animal": Object {
        "const": "Cat",
      },
    },
    "required": Array [
      "Animal",
    ],
  },
}
`;

exports[`schemaParser() parses schema with nested conditions 1`] = `
Object {
  "-f42a226": Object {
    "$id": "-f42a226",
    "properties": Object {
      "state": Object {
        "const": "New York",
      },
    },
    "required": Array [
      "state",
    ],
  },
  "14f43ce2": Object {
    "$id": "14f43ce2",
    "properties": Object {
      "country": Object {
        "const": "USA",
      },
    },
    "required": Array [
      "country",
    ],
  },
  "5ad8e931": Object {
    "$id": "5ad8e931",
    "properties": Object {
      "state": Object {
        "const": "California",
      },
    },
    "required": Array [
      "state",
    ],
  },
  "767ff7c6": Object {
    "$id": "767ff7c6",
    "if": Object {
      "properties": Object {
        "country": Object {
          "const": "USA",
        },
      },
      "required": Array [
        "country",
      ],
    },
    "properties": Object {
      "country": Object {
        "enum": Array [
          "USA",
        ],
      },
    },
    "required": Array [
      "country",
    ],
    "then": Object {
      "else": Object {
        "if": Object {
          "properties": Object {
            "state": Object {
              "const": "California",
            },
          },
          "required": Array [
            "state",
          ],
        },
        "then": Object {
          "properties": Object {
            "city": Object {
              "enum": Array [
                "Los Angeles",
                "San Diego",
                "San Jose",
              ],
              "type": "string",
            },
          },
        },
      },
      "if": Object {
        "properties": Object {
          "state": Object {
            "const": "New York",
          },
        },
        "required": Array [
          "state",
        ],
      },
      "properties": Object {
        "state": Object {
          "enum": Array [
            "California",
            "New York",
          ],
          "type": "string",
        },
      },
      "required": Array [
        "state",
      ],
      "then": Object {
        "properties": Object {
          "city": Object {
            "enum": Array [
              "New York City",
              "Buffalo",
              "Rochester",
            ],
            "type": "string",
          },
        },
      },
    },
    "type": "object",
  },
}
`;

exports[`schemaParser() parses schema with oneof and nested dependencies 1`] = `
Object {
  "-37c29d49": Object {
    "$id": "-37c29d49",
    "properties": Object {
      "update_absences": Object {
        "const": "NON_MEDICAL_ONLY",
      },
    },
    "type": "object",
  },
  "-406a5a54": Object {
    "$id": "-406a5a54",
    "dependencies": Object {
      "employee_accounts": Object {
        "oneOf": Array [
          Object {
            "properties": Object {
              "employee_accounts": Object {
                "const": true,
              },
              "update_absences": Object {
                "oneOf": Array [
                  Object {
                    "const": "BOTH",
                    "title": "Both",
                  },
                ],
                "title": "Update Absences",
                "type": "string",
              },
            },
          },
        ],
      },
      "update_absences": Object {
        "oneOf": Array [
          Object {
            "properties": Object {
              "permitted_extension": Object {
                "title": "Permitted Extension",
                "type": "integer",
              },
              "update_absences": Object {
                "const": "BOTH",
              },
            },
          },
          Object {
            "properties": Object {
              "permitted_extension": Object {
                "title": "Permitted Extension",
                "type": "integer",
              },
              "update_absences": Object {
                "const": "MEDICAL_ONLY",
              },
            },
          },
          Object {
            "properties": Object {
              "permitted_extension": Object {
                "title": "Permitted Extension",
                "type": "integer",
              },
              "update_absences": Object {
                "const": "NON_MEDICAL_ONLY",
              },
            },
          },
        ],
      },
    },
    "properties": Object {
      "employee_accounts": Object {
        "title": "Employee Accounts",
        "type": "boolean",
      },
    },
    "type": "object",
  },
  "-7a6dd81b": Object {
    "$id": "-7a6dd81b",
    "properties": Object {
      "update_absences": Object {
        "const": "MEDICAL_ONLY",
      },
    },
    "type": "object",
  },
  "-7c3c9229": Object {
    "$id": "-7c3c9229",
    "const": "BOTH",
    "title": "Both",
  },
  "3a28e528": Object {
    "$id": "3a28e528",
    "properties": Object {
      "employee_accounts": Object {
        "const": true,
      },
    },
    "type": "object",
  },
  "934b22c": Object {
    "$id": "934b22c",
    "properties": Object {
      "update_absences": Object {
        "const": "BOTH",
      },
    },
    "type": "object",
  },
}
`;

exports[`schemaParser() parses superSchema properly 1`] = `
Object {
  "-130bae51": Object {
    "$id": "-130bae51",
    "anyOf": Array [
      Object {
        "required": Array [
          "name",
        ],
      },
    ],
    "properties": Object {
      "name": Object {
        "type": "string",
      },
    },
    "type": "object",
  },
  "-1e3c57ec": Object {
    "$id": "-1e3c57ec",
    "anyOf": Array [
      Object {
        "required": Array [
          "choice",
        ],
      },
      Object {
        "required": Array [
          "more",
        ],
      },
    ],
    "properties": Object {
      "choice": Object {
        "const": "two",
        "type": "string",
      },
      "more": Object {
        "type": "string",
      },
    },
    "type": "object",
  },
  "-42566fe2": Object {
    "$id": "-42566fe2",
    "anyOf": Array [
      Object {
        "required": Array [
          "choice",
        ],
      },
      Object {
        "required": Array [
          "other",
        ],
      },
    ],
    "properties": Object {
      "choice": Object {
        "const": "one",
        "type": "string",
      },
      "other": Object {
        "type": "number",
      },
    },
    "type": "object",
  },
  "super-schema": Object {
    "$id": "super-schema",
    "definitions": Object {
      "choice1": Object {
        "properties": Object {
          "choice": Object {
            "const": "one",
            "type": "string",
          },
          "other": Object {
            "type": "number",
          },
        },
        "type": "object",
      },
      "choice2": Object {
        "properties": Object {
          "choice": Object {
            "const": "two",
            "type": "string",
          },
          "more": Object {
            "type": "string",
          },
        },
        "type": "object",
      },
      "foo": Object {
        "properties": Object {
          "name": Object {
            "type": "string",
          },
        },
        "type": "object",
      },
      "list": Object {
        "items": Object {
          "type": "string",
        },
        "type": "array",
      },
      "passwords": Object {
        "properties": Object {
          "pass1": Object {
            "type": "string",
          },
          "pass2": Object {
            "type": "string",
          },
        },
        "required": Array [
          "pass1",
          "pass2",
        ],
        "type": "object",
      },
      "price": Object {
        "minimum": 0,
        "multipleOf": 0.03,
        "title": "Price per task ($)",
        "type": "number",
      },
    },
    "properties": Object {
      "anything": Object {
        "additionalProperties": Object {
          "type": "string",
        },
        "type": "object",
      },
      "dataUrlWithName": Object {
        "format": "data-url",
        "type": "string",
      },
      "foo": Object {
        "type": "string",
      },
      "list": Object {
        "$ref": "#/definitions/list",
      },
      "multi": Object {
        "anyOf": Array [
          Object {
            "$ref": "#/definitions/foo",
          },
        ],
      },
      "passwords": Object {
        "$ref": "#/definitions/passwords",
      },
      "price": Object {
        "$ref": "#/definitions/price",
      },
      "single": Object {
        "oneOf": Array [
          Object {
            "$ref": "#/definitions/choice1",
          },
          Object {
            "$ref": "#/definitions/choice2",
          },
        ],
      },
    },
    "type": "object",
  },
}
`;
